// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile g medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        aspectRatio={1}
        fill={true}
        resizeMode="cover"
        rounded={true}
        style={
          Object {
            "overflow": "hidden",
            "width": 97,
          }
        }
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
            "paddingLeft": 10,
            "width": "70%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile g small 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        aspectRatio={1}
        fill={true}
        resizeMode="cover"
        rounded={true}
        style={
          Object {
            "overflow": "hidden",
            "width": "30%",
          }
        }
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
            "paddingLeft": 10,
            "width": "70%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile g without breakpoint should be like small 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        aspectRatio={1}
        fill={true}
        resizeMode="cover"
        rounded={true}
        style={
          Object {
            "overflow": "hidden",
            "width": 97,
          }
        }
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
            "paddingLeft": 10,
            "width": "70%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;
